# docs/swagger.json
@@ -148,6 +148,94 @@
         }
       }
     },
+    "/api/users/update/{userId}": {
+      "parameters": [
+        {
+          "name": "userId",
+          "in": "path",
+          "required": true,
+          "schema": {
+            "type": "integer"
+          },
+          "description": "ID del usuario a actualizar"
+        }
+      ],
+      "patch": {
+        "tags": [
+          "users"
+        ],
+        "summary": "Actualizar información del usuario",
+        "description": "Permite actualizar la información del usuario.",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "first_name": {
+                    "type": "string",
+                    "description": "El nuevo nombre del usuario."
+                  },
+                  "last_name": {
+                    "type": "string",
+                    "description": "El nuevo apellido del usuario."
+                  },
+                  "dni": {
+                    "type": "string",
+                    "description": "El nuevo DNI del usuario."
+                  },
+                  "phone_number": {
+                    "type": "string",
+                    "description": "El nuevo número de teléfono del usuario."
+                  },
+                  "birth_date": {
+                    "type": "string",
+                    "format": "date",
+                    "description": "La nueva fecha de nacimiento del usuario en formato YYYY-MM-DD."
+                  },
+                  "password": {
+                    "type": "string",
+                    "format": "password",
+                    "description": "La nueva contraseña del usuario."
+                  },
+                  "is_admin": {
+                    "type": "boolean",
+                    "description": "Indica si el usuario es administrador o no."
+                  },
+                  "is_student": {
+                    "type": "boolean",
+                    "description": "Indica si el usuario es estudiante o no."
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Información del usuario actualizada correctamente."
+          },
+          "400": {
+            "description": "Error en la solicitud, revisa los datos enviados."
+          },
+          "401": {
+            "description": "Error de autenticación , verificar token."
+          },
+          "404": {
+            "description": "Usuario no encontrado."
+          },
+          "500": {
+            "description": "Error interno del servidor."
+          }
+        }
+      }
+    },
     "/api/subjects/link-student-to-subject": {
       "post": {
         "tags": [
